First commited as before_61265_rev1